<resources>
    <string name="app_name">Homework1</string>
    <string name="text_val_1">Value 1:</string>
    <string name="text_val_2">Value 2:</string>
    <string name="text_op">Operator:</string>
    <string name="calc_button_text">Calculate</string>
    <string name="edit_text_hint">Enter a signed int...</string>
    <string-array name="operations_array">
        <item>+</item>
        <item>-</item>
        <item>*</item>
        <item>/</item>
    </string-array>
</resources>
